[gd_scene load_steps=2 format=3 uid="uid://m18u1d8saa5r"]

[ext_resource type="Script" path="res://verificador.gd" id="1_kuc6x"]

[node name="Verificador" type="CanvasLayer"]
script = ExtResource("1_kuc6x")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
self_modulate = Color(1, 1, 1, 0.486275)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -535.0
offset_top = -11.0
offset_right = 540.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Verificador de Rank"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
self_modulate = Color(0.72549, 0.776471, 1, 0.643137)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer"]
self_modulate = Color(0.333333, 0.490196, 1, 1)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer"]
self_modulate = Color(0.909804, 0.917647, 0.964706, 1)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24.445)
layout_mode = 2

[node name="NomeInput" type="TextEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Nome"

[node name="Control2" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24.445)
layout_mode = 2

[node name="PontosInput" type="TextEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Pontos
"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Control3" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24.445)
layout_mode = 2

[node name="Verifcar" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Verificar
"

[node name="Control4" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24.445)
layout_mode = 2

[node name="Vitorias" type="TextEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Vitorias
"

[node name="Control5" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24.445)
layout_mode = 2

[node name="Derrotas" type="TextEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Derrotas

"

[node name="Control6" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24.445)
layout_mode = 2

[node name="RankBtn" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Verificar rank"

[node name="Panel2" type="Panel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer"]
self_modulate = Color(1, 0.368627, 0.917647, 1)
layout_mode = 2
size_flags_horizontal = 3

[node name="Resultado" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Panel2/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
